# secunda_test

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1fe1a3983282_add_activity_depth_constraint.py  4021fdd40029_create_tables_and_seed_data.py
app/: authentication.py  config.py  database.py  main.py  router.py
app/api/filters/: organization.py
app/api/responses/: activity.py  building.py  organization.py
app/api/routes/: __init__.py  organization.py
app/models/: activity.py  base.py  building.py  organization.py  organization_activity.py  phone.py
app/repositories/: activity.py  base.py  building.py  organization.py  organization_activity.py  phone.py
app/services/: base.py  organization.py
app/utils/: seed_test_data.py
